# RUSTOS

./: .gitignore  Makefile  ROADMAP.md  build_output.txt  build_output_utf8.txt  populate_ext2.sh  report.txt  tail.rs
kernel/: Cargo.toml  i686-unknown-none.json  linker.ld  rustc-ice-2026-03-18T14_42_18-739.txt  rustc-ice-2026-03-18T14_50_15-390.txt  rustc-ice-2026-05-02T18_27_22-6823.txt  rustc-ice-2026-05-02T18_27_33-7025.txt  rustc-ice-2026-05-02T18_28_11-7430.txt  rustc-ice-2026-05-02T18_28_25-7676.txt  rustc-ice-2026-05-02T18_28_39-7875.txt  rustc-ice-2026-05-02T18_29_09-7935.txt  rustc-ice-2026-05-02T18_29_52-8336.txt  rustc-ice-2026-05-02T18_30_23-8911.txt  rustc-ice-2026-05-02T18_30_38-9338.txt  rustc-ice-2026-05-02T18_31_03-9586.txt  rustc-ice-2026-05-02T18_31_20-9791.txt  rustc-ice-2026-05-03T18_06_03-47518.txt  rustc-ice-2026-05-03T18_07_52-47999.txt  rustc-ice-2026-05-03T18_08_55-48115.txt  rustc-ice-2026-05-03T18_09_57-48736.txt  rustc-ice-2026-05-03T18_10_47-49187.txt  rustc-ice-2026-05-03T18_20_31-50717.txt  rustc-ice-2026-05-03T18_21_35-51180.txt  rustc-ice-2026-05-03T18_22_04-51310.txt  rustc-ice-2026-05-03T18_22_15-51341.txt  rustc-ice-2026-05-03T18_23_12-51403.txt  rustc-ice-2026-05-03T18_24_18-51839.txt  rustc-ice-2026-05-03T18_24_25-51876.txt  rustc-ice-2026-05-03T18_24_33-51909.txt  rustc-ice-2026-05-03T18_33_31-52148.txt  rustc-ice-2026-05-03T18_33_57-52202.txt  rustc-ice-2026-05-03T18_37_48-53566.txt  rustc-ice-2026-05-03T18_46_51-53628.txt  rustc-ice-2026-05-03T18_46_59-53660.txt  rustc-ice-2026-05-03T18_47_07-53692.txt  (+16 more)
kernel/src/: allocator.rs  (+10 more)
(+81 files in other folders)
